--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,9 +14,13 @@ body::before{
   width: 100%;
   height: 100%;
   background: linear-gradient(0deg,lightgreen,#eee);
-  /* z-index: -1; */
+  z-index: -1;
   position: fixed;
   opacity: 55%;
-  /* top:0;
-  left:0; */
+  top:0;
+  left:0;
+}
+
+h1{
+  
 }
